--- a/frontend/src/components/ChatBotApp.css
+++ b/frontend/src/components/ChatBotApp.css
@@ -1,6 +1,7 @@
 .chat-app {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
+  height: 100vh; /* fallback */
   display: flex;
 }
 
@@ -193,7 +194,7 @@
   flex-grow: 1;
   background-color: transparent;
   border: none;
-  font-size: 1.7rem;
+  font-size: 16px;
   color: #7b8ebc;
 }
 
