--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,8 +8,11 @@
   font-family: 'Outfit', sans-serif;
 }
 
-html {
+html,
+body {
   font-size: 62.5%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .container {
